--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -2,34 +2,89 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
 }
 
 .places-container {
+  margin-top: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 800px;
 }
 
 .card {
+  width: 740px;
+  height: 270px;
   margin-bottom: 15px;
   display: flex;
   flex-direction: row;
-  border-radius: 12px 0px 0px 12px;
+  border-radius: 12px 12px 12px 12px;
+}
+
+.card-body {
+  margin-top: 10px;
 }
 
 .card-img-top {
-  width: 236px;
-  height: 273.5px;
+  width: 200px;
+  height: 270px;
   border-radius: 12px 0px 0px 12px;
 }
 
 #dropdownMenuButton {
   border-radius: 12px;
-  background-color: var(--brown-color);
+  background-color: rgba(204, 184, 157, 1);
   padding-left: 10px;
   padding-right: 10px;
+  font-size: 20px;
 }
 
+.bi-star {
+  fill: salmon;
+}
+
+.place-price {
+  color: salmon;
+  font-size: 24px;
+  font-weight: 700;
+  text-align: right;
+  padding-right: 20px;
+}
+
+.place-btn-group {
+  display: flex;
+  gap: 10px;
+}
+
+.view-place-btn {
+  width: 452px;
+  height: 48px;
+  background-color: rgba(204, 184, 157, 1);
+  font-size: 18px;
+  text-align: center;
+}
+
+.like-btn {
+  width: 48px;
+  height: 48px;
+  border-color: rgba(141, 211, 187, 1);
+}
+
+.bi-heart {
+  fill: black;
+}
+
+.like-btn:hover {
+  border-color: rgba(141, 211, 187, 1);
+}
+
+.view-place-btn:hover {
+  background-color: rgba(204, 184, 157, 1);
+}
+
+/* one place styles */
 .place-info-container {
   background-color: rgba(241, 233, 220, 1);
   width: 1000px;
@@ -95,8 +150,4 @@
 
 .book-btn:hover {
   background-color: rgba(204, 184, 157, 0.92);
-}
-
-.card {
-  background-color: transparent;
 }
