--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -74,7 +74,7 @@ span,
 
 .sign-up-container {
   flex-direction: column;
-  gap: 50px;
+  gap: 35px;
   background-color: white;
   border-radius: 24px;
   width: 732px;
@@ -107,6 +107,7 @@ form {
 }
 
 .circle-div {
+  margin-top: 30px;
   background-color: rgba(196, 196, 196, 1);
   width: 48px;
   height: 48px;
