--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -6,7 +6,8 @@
   font-size: 12px;
 }
 
-.places-container {
+.places-container,
+.booked-places-container {
   margin-top: 70px;
   display: flex;
   flex-direction: column;
@@ -69,7 +70,7 @@
 .like-btn {
   width: 48px;
   height: 48px;
-  border-color: rgba(141, 211, 187, 1);
+  border-color: salmon;
 }
 
 .bi-heart {
@@ -77,7 +78,7 @@
 }
 
 .like-btn:hover {
-  border-color: rgba(141, 211, 187, 1);
+  border-color: salmon;
 }
 
 .view-place-btn:hover {
@@ -96,6 +97,14 @@
   padding: 0px 20px 0px 20px;
 }
 
+.place-info-container > div {
+  margin: 0px 30px 0px 30px;
+  color: black;
+}
+
+.place-info-container > div > h3 {
+  padding-bottom: 30px;
+}
 .main-place-info-container {
   width: 1000px;
   border-radius: 38px;
